tests/analyze/variant-ambiguity/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Variant `red` must be qualified by its enum.
> 15 | 	if c is red {
                ^^^
